// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TESTING ThemedText Component WHEN the component is rendered should match the snapshot 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "PoppinsRegular",
        "fontSize": 14,
        "lineHeight": 20,
      },
      {
        "fontWeight": 400,
      },
      undefined,
    ]
  }
>
  Test
</Text>
`;

exports[`TESTING ThemedText Component WHEN the variant is set to heading should match the snapshot 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "PoppinsSemiBold",
        "fontSize": 24,
        "fontWeight": 600,
        "lineHeight": 32,
      },
      {
        "fontWeight": 400,
      },
      undefined,
    ]
  }
>
  Test
</Text>
`;
